--- a/HealthLife/src/app/Cliente/detalle-plan/detalle-plan.component.html
+++ b/HealthLife/src/app/Cliente/detalle-plan/detalle-plan.component.html
@@ -26,8 +26,9 @@
         </div>
       </div>
     </div>
-
-    <!--Acordeon que muestra el detalle que se realiza en cada día-->
+    <br>
+    <h2> Actividades del plan</h2>
+    <br>
     <div class="detalle-actividaades-plan">
       <!--<div class="accordion" id="accordionExample">
 
@@ -50,6 +51,7 @@
 
         
       </div>-->
+        <app-actividades [id]="plan.id_planes"></app-actividades>
     </div>
 
     <!--Botón para suscribirse al plan-->
