--- a/HealthLife/src/app/Cliente/planes/planes.component.html
+++ b/HealthLife/src/app/Cliente/planes/planes.component.html
@@ -40,7 +40,7 @@
                         
                     </div>
                     <div class="contenedor-boton">
-                        <input (click)="cambiarComponente(true); cambiarIndice(element)" type="button" value="Ver curso  ▶" class="btn-verCurso">
+                        <input (click)="cambiarComponente(true); cambiarIndice(element)" type="button" value="Ver plan  ▶" class="btn-verCurso">
                     </div>       
                 </div>
             </div>
