--- a/HealthLife/src/app/Cliente/profesionales/profesionales.component.html
+++ b/HealthLife/src/app/Cliente/profesionales/profesionales.component.html
@@ -21,9 +21,9 @@
 
 
     <ng-template #detallesplan>
-        <div class="boton-regresar" (click)="cambiarComponente(false)">
+        <!-- <div class="boton-regresar" (click)="cambiarComponente(false)">
             <input type="submit" value="Volver" class="btn-Volver" id="iniciar"> 
-        </div>
+        </div> -->
         <app-planes [id]="indice"></app-planes>
     </ng-template>
 
