--- a/HealthLife/src/app/Profesional/clientes-admin-profesionales/clientes-admin-profesionales.component.html
+++ b/HealthLife/src/app/Profesional/clientes-admin-profesionales/clientes-admin-profesionales.component.html
@@ -3,9 +3,9 @@
 <div class="card-body">
     <h5 class="card-title">Clientes suscritos</h5>
     <div class="dataTable-wrapper dataTable-loading no-footer sortable searchable fixed-columns">
-        <div class="dataTable-top">
+        <!-- <div class="dataTable-top">
             <div class="dataTable-search"><input class="dataTable-input" placeholder="Buscar..." type="text"></div>
-        </div>
+        </div> -->
         <div class="dataTable-container">
             <table class="table datatable dataTable-table">
                 <thead>
