--- a/HealthLife/src/app/Profesional/planes-admin-profesionales/planes-admin-profesionales.component.html
+++ b/HealthLife/src/app/Profesional/planes-admin-profesionales/planes-admin-profesionales.component.html
@@ -201,13 +201,13 @@
                         <div class="row mb-3">
                             <label for="inputDia" class="col-sm-2 col-form-label">Dia</label>
                             <select id="inputDia" class="col-sm-10" formControlName="dia" required> 
-                                <option value="1" selected>Lunes</option>
-                                <option value="2">Martes</option>
-                                <option value="3">Miércoles</option>
-                                <option value="4">Jueves</option>
-                                <option value="5">Viernes</option>
-                                <option value="6">Sábado</option>
-                                <option value="7">Domingo</option>
+                                <option [ngValue]=1 selected>Lunes</option>
+                                <option [ngValue]=2>Martes</option>
+                                <option [ngValue]=3>Miércoles</option>
+                                <option [ngValue]=4>Jueves</option>
+                                <option [ngValue]=5>Viernes</option>
+                                <option [ngValue]=6>Sábado</option>
+                                <option [ngValue]=7>Domingo</option>
                             </select>
                         </div>
                         <div class="row mb-3">
